--- a/Languages/Russian/DefInjected/RecipeDef/Recipes_AE BodyPart.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/Recipes_AE BodyPart.xml
@@ -4,6 +4,10 @@
 	<InstallAEForbiddenFruitImplant.label>установить имплант запретного знания</InstallAEForbiddenFruitImplant.label>
 	<InstallAEForbiddenFruitImplant.description>Установит имплант запретного знания</InstallAEForbiddenFruitImplant.description>
 	<InstallAEForbiddenFruitImplant.jobString>Устанавливает имплант запретного знания</InstallAEForbiddenFruitImplant.jobString>
+  
+	<RemoveAEForbiddenFruitImplant.label>извлечь имплант запретного знания</RemoveAEForbiddenFruitImplant.label>
+	<RemoveAEForbiddenFruitImplant.description>Извлечёт имплант запретного знания</RemoveAEForbiddenFruitImplant.description>
+	<RemoveAEForbiddenFruitImplant.jobString>Извлекает имплант запретного знания</RemoveAEForbiddenFruitImplant.jobString>
 	
 	
   
@@ -14,5 +18,15 @@
 	<InstallAEGrinderJaw.label>установить челюсть-измельчитель</InstallAEGrinderJaw.label>
 	<InstallAEGrinderJaw.description>Установит челюсть-измельчитель</InstallAEGrinderJaw.description>
 	<InstallAEGrinderJaw.jobString>Устанавливает челюсть-измельчитель</InstallAEGrinderJaw.jobString>
+	
+	
+	
+	<InstallAEThermalReflectiveSkinImplant.label>установить термо-отражающую кожную железу</InstallAEThermalReflectiveSkinImplant.label>
+	<InstallAEThermalReflectiveSkinImplant.description>Установит термо-отражающую кожную железу</InstallAEThermalReflectiveSkinImplant.description>
+	<InstallAEThermalReflectiveSkinImplant.jobString>Устанавливает термо-отражающую кожную железу</InstallAEThermalReflectiveSkinImplant.jobString>
+	
+	<RemoveAEThermalReflectiveSkinImplant.label>извлечь термо-отражающую кожную железу</RemoveAEThermalReflectiveSkinImplant.label>
+	<RemoveAEThermalReflectiveSkinImplant.description>Извлечёт термо-отражающую кожную железу</RemoveAEThermalReflectiveSkinImplant.description>
+	<RemoveAEThermalReflectiveSkinImplant.jobString>Извлекает термо-отражающую кожную железу</RemoveAEThermalReflectiveSkinImplant.jobString>
   
 </LanguageData>
