--- a/Languages/Russian/DefInjected/ThingDefs/Items_AE_BodyPart.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_AE_BodyPart.xml
@@ -16,5 +16,10 @@
 
 	<AEGrinderJaw.label>челюсть-измельчитель</AEGrinderJaw.label>
 	<AEGrinderJaw.description>Аномальная искусственная челюсть, повторяющая структуру мясорубки. Вращающиеся внутри острые как бритва лезвия измельчают любой источник пищи в легкоусвояемую кашицу, что позволяет значительно ускорить ее потребление. Его огромная сила позволяет носителю даже откусывать конечности живым противникам. Интенсивные вибрации причиняют носителю боль, но челюсть также усиливает голос пользователя, делая его более успокаивающим. Этот органический металл обладает свойствами самовосстановления, самостоятельно устраняя повреждения. Он радикально превосходит свой биологический аналог по нескольким аспектам.</AEGrinderJaw.description>
+	
+	
+
+	<AEThermalReflectiveSkinImplant.label>термо-отражающая кожная железа</AEThermalReflectiveSkinImplant.label>
+	<AEThermalReflectiveSkinImplant.description>Аномальная термо-отражающая кожная железа, которая повторяет структуру отражающей поверхности Передатчика. Клеточная структура кожи изменяется, чтобы отражать как световое, так и тепловое излучение, обеспечивая исключительную защиту от ожогов и тепловых атак. Измененная поверхность прекрасно рассеивает свет, создавая завораживающую игру цветов и сияющее свечение, которое уникальным и поразительным образом повышает привлекательность пользователя. Однако это превращение также делает кожу более хрупкой и восприимчивой к физическим повреждениям.</AEThermalReflectiveSkinImplant.description>
 
 </LanguageData>
