Categoy and Threat class can be set from the start Archites changed to frostites Terminal and CTree now have proper EntityEntry Added Class to Snow Army Added study notes to Snow Man

--- a/Languages/Russian/DefInjected/ThingDefs/Races_SnowArmy.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Races_SnowArmy.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
 	<AE_SnowMan.label>снеговик</AE_SnowMan.label>
-	<AE_SnowMan.description>Снеговик кажется безобидным и сделанным из нескольких больших снежных комков. Однако его ледяное снежное тело оказывается удивительно выносливым, быстро развеивая любые иллюзии невинности. Он может атаковать, бросая в противников снежки или царапая их своими руками ветками. Он может выжить даже при значительных повреждениях тела.</AE_SnowMan.description>
+	<AE_SnowMan.description>Снеговик кажется безобидным и сделанным из нескольких больших снежных комков. Однако его ледяное снежное тело оказывается удивительно выносливым, быстро развеивая любые иллюзии невинности. Он может атаковать, бросая в противников снежки или царапая их своими руками ветками. Он может выжить даже при значительных повреждениях тела.\n\nКлассифицировано как аномалия класса 2 (Внимательность).</AE_SnowMan.description>
 
 	<AE_SnowMan.comps.CompInspectStringEmergence.inspectString>Появился из {SOURCEPAWN_labelShort}</AE_SnowMan.comps.CompInspectStringEmergence.inspectString>
 	<AE_SnowMan.tools.head.label>голова</AE_SnowMan.tools.head.label>
